# vapor-idx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  prompt
docs/: 3D_INDEXING.md  API_REFERENCE.md  COMPLETE_PROMPTING_GUIDE,md  CONCEPT.md  CROSS_MODAL.md  DEVELOPER_GUIDE.md  PIXEL_INDEXING.md  TESTING.md
python/: README.md  __init__(1).py  exact.py  keyword.py  pyproject.toml  query_engine.py  range_.py  record_store.py  relationship_store.py  smoke_test.py  types.py
python/vapor_idx/: __init__.py  instance.py  record_store.py  schema.py  traversal_engine.py
python/vapor_idx/indexes/: __init__.py  prefix.py
rust/: Cargo.toml  instance.rs  lib.rs  query_engine.rs  range.rs  record_store.rs  relationship_store.rs  schema.rs  traversal_engine.rs
rust/src/: instance.rs  lib.rs  query_engine.rs  relationship_store.rs  schema.rs  types.rs
rust/src/indexes/: exact.rs  keyword.rs  mod.rs  prefix.rs  range.rs
skills/cad-to-photo/: SKILL.md
skills/color-reconstructor/: SKILL.md
skills/cross-modal-reconstructor/: SKILL.md
skills/design-indexer/: SKILL.md
skills/environment-modifier/: SKILL.md
skills/lighting-engine/: SKILL.md
skills/material-engine/: SKILL.md
skills/mesh-analyzer/: SKILL.md
skills/pixel-analyzer/: SKILL.md
skills/scene-analyzer/: SKILL.md
skills/skeleton-2d/: SKILL.md
typescript/: KeywordIndex.ts  PrefixIndex.ts  QueryEngine.ts  RecordStore.ts  TraversalEngine.ts  index.ts  negative_test.mjs  package-lock.json  package.json  pixel_test.mjs  smoke.mjs  tsconfig.json  types.ts
typescript/src/: QueryEngine.ts  RecordStore.ts  (+4 more)
(+2 files in other folders)
