[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "vapor-idx"
version         = "0.1.1"
description     = "Pure RAM, per-skill, declarative in-memory indexing framework for AI skill authors"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
dependencies    = []

[project.urls]
Homepage   = "https://github.com/RebornBeat/vapor-idx"
Repository = "https://github.com/RebornBeat/vapor-idx"

[tool.hatch.build.targets.wheel]
packages = ["vapor_idx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
