[package]
name        = "vapor-idx"
version     = "0.1.0"
edition     = "2021"
description = "Pure RAM, per-skill, declarative in-memory indexing framework for AI skill authors"
license     = "MIT"
repository  = "https://github.com/RebornBeat/vapor-idx"
keywords    = ["in-memory", "index", "ai", "skill", "ephemeral"]
categories  = ["data-structures", "algorithms"]

[lib]
name = "vapor_idx"
path = "src/lib.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[[test]]
name = "integration"
path = "tests/integration.rs"
